src/main/java/org/example/interpreter/error/ExpressionDidNotEvaluateException.java
package org.example.interpreter.error;

import lombok.AccessLevel;
import lombok.EqualsAndHashCode;
import lombok.ToString;
import lombok.experimental.FieldDefaults;

@EqualsAndHashCode(callSuper = true)
@ToString(callSuper = true)
@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
public class ExpressionDidNotEvaluateException extends CriticalInterpreterException {
}
